--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,110 @@
-/* color palette from https://colorhunt.co/palette/213547 */
-
 body {
+  margin: 0;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+h1 {
+  margin-top: 0;
+  font-family: 'Yusei Magic', cursive;
+}
+
+h2 {
+  font-family: 'Yusei Magic', cursive;
+}
+
+h3 {
+  font-family: 'Yusei Magic', cursive;
+}
+
+.top-container {
+  background-color: #eeeeee;
+  position: relative;
+  padding-top: 100px;
+}
+
+.pic {
+  height: 256px;
+  width: 256px;
+}
+
+.pic2 {
+  height: 100px;
+  width: 100px;
+}
+
+.middle-container {
+  padding-top: 50px;
   background-color: #eeeeee;
 }
 
+
+.skill-table {
+  margin: auto;
+  width: 50%;
+}
+
+.mouse {
+  position: absolute;
+  padding-left: 295px;
+  padding-top: 30px;
+  height: 64px;
+  width: 64px;
+}
+
+.server {
+  position: absolute;
+  margin-top: 30px;
+  left: 485px;
+  height: 64px;
+  width: 64px;
+}
+
+.table {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+
+.bottom-container {
+  background-color: #eeeeee
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+  height: 128px;
+  width: 128px;
+}
+
 hr {
+  margin: auto;
   border-style: dotted none none none;
-  border-color: #19d3da;
+  border-color: #11698e;
   border-width: 5px;
   width: 3%;
 }
 
-h1 {
-  color: #686d76;
+.name {
+  position: relative;
+  top: 30px;
 }
 
-h3 {
-  color: #686d76;
+.plane {
+  position: absolute;
+  left: 300px;
+  bottom: 250px;
+  height: 64px;
+  width: 64px;
+}
+
+.description {
+  margin: auto;
+  width: 50%;
+}
+
+.contact-me {
+  padding-bottom: 10px;
 }
